setup test suite

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -3,10 +3,10 @@
   "eqeqeq": true,
   "immed": true,
   "latedef": true,
-  "newcap": true,
+  "newcap": false,
   "noarg": true,
   "sub": true,
-  "undef": true,
+  "undef": false,
   "unused": true,
   "boss": true,
   "eqnull": true,
