--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "zepto"
   ],
   "homepage": "https://github.com/colindresj/trellis",
+  "main": "dist/trellis.js",
   "author": {
     "name": "JC",
     "email": "j@colindres.me"
@@ -17,26 +18,28 @@
     "type": "git",
     "url": "git://github.com/colindresj/trellis.git"
   },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ],
+  "license": "MIT",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "gulp": "gulp"
   },
   "devDependencies": {
-    "gulp": "~3.5.0",
-    "gulp-load-plugins": "~0.3.0",
-    "gulp-util": "~2.2.9",
-    "gulp-jshint": "~1.4.0",
-    "jshint-stylish": "~0.1.5",
-    "gulp-clean": "~0.2.4",
-    "gulp-size": "~0.1.2",
-    "gulp-connect": "~1.0.7",
-    "gulp-uglify": "~0.2.1",
-    "gulp-rename": "~1.1.0",
-    "gulp-qunit": "~0.2.1"
+    "del": "^2.2.0",
+    "gulp": "^3.5.6",
+    "gulp-banner": "^0.1.3",
+    "gulp-connect": "^2.3.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-qunit": "^1.3.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.5.2",
+    "gulp-umd": "^0.2.0",
+    "gulp-util": "^3.0.7",
+    "jquery": "^2.2.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "qunit": "^0.9.0"
   },
   "engines": {
     "node": ">=0.8.0"
